--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,23 +13,37 @@ build:
     number: 3
     skip: true  # [py<37]
 
-requirements:
-    build:
-        - {{ compiler("c") }}              # [unix]
-        - {{ compiler("fortran") }}        # [unix]
-        - {{ compiler("m2w64_c") }}        # [win]
-        - {{ compiler('m2w64_fortran') }}  # [win]
-        # - vs2015_win-64                    # [win]
-        - cmake
-        - swig
-    host:
-        - python
-    run:
-        - python
+outputs:
 
-test:
-  imports:
-    - xfoil_interface
+  - name: libxfoil
+    script: build_lib.bat  # [win]
+    script: build_lib.sh  # [not win]
+
+    requirements:
+        build:
+            - {{ compiler("c") }}              # [unix]
+            - {{ compiler("fortran") }}        # [unix]
+            - {{ compiler("m2w64_c") }}        # [win]
+            - {{ compiler('m2w64_fortran') }}  # [win]
+            - cmake
+
+
+  - name: pyxfoil
+    script: build_py.bat  # [win]
+    script: build_py.sh  # [not win]
+    requirements:
+        build:
+            - {{ compiler("c") }}
+            - swig
+        host:
+            - python
+            - libxfoil
+        run:
+            - python
+
+    test:
+      imports:
+        - xfoil_interface
 
 about:
     home: https://github.com/montagdude/libxfoil
