--- a/.ci_support/win_64_python3.7.____cpython.yaml
+++ b/.ci_support/win_64_python3.7.____cpython.yaml
@@ -4,6 +4,10 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+m2w64_c_compiler:
+- m2w64-toolchain
+m2w64_fortran_compiler:
+- m2w64-toolchain
 pin_run_as_build:
   python:
     min_pin: x.x
