--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
     sha256: "1e251aac259bac84aa5be318ae62a496b705c625f0e54c44af230494904858ac"
 
 build:
-    number: 3
-    skip: true  # [py<36 or win]
+    number: 4
+
 
 requirements:
     build:
@@ -19,11 +19,12 @@ requirements:
         - {{ compiler("fortran") }}        # [unix]
         - {{ compiler("m2w64_c") }}        # [win]
         - {{ compiler('m2w64_fortran') }}  # [win]
-        - vs2015_win-64                    # [win]
         - cmake
+        - vs2017_win-64                     # [win64]
         - swig
     host:
         - python
+
     run:
         - python
 
