--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,14 +15,10 @@ build:
 
 requirements:
     build:
-        - {{ compiler("c") }}              # [unix]
-        - {{ stdlib("c") }}                # [unix]
-        - {{ compiler("fortran") }}        # [unix]
-        - {{ compiler("m2w64_c") }}        # [win]
-        - {{ stdlib("m2w64_c") }}          # [win]
-        - {{ compiler('m2w64_fortran') }}  # [win]
+        - {{ stdlib("c") }}
+        - {{ compiler("c") }}
+        - {{ compiler("fortran") }}
         - cmake
-        - vs2017_win-64                     # [win64]
         - swig
     host:
         - python
